--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,3 +1,5 @@
+@use '@/sass/variaveis' as *;
+
 @mixin breakpoint($point) {
     @if $point == mobile-small {
         @media screen and (min-width: 375px) {
