:lipstick: feat: Corrige valor da variável

--- a/src/sass/_variaveis.scss
+++ b/src/sass/_variaveis.scss
@@ -24,7 +24,7 @@ $tamanho-fonte-muito-pequeno: 0.75rem;
 // Botões
 $fundo-botao-primario: #2a7ae4;
 $fundo-botao-primario-hover: #5595e9;
-$fundo-botao-secundario: 'transparent';
+$fundo-botao-secundario: transparent;
 $fundo-botao-secundario-hover: #d4e4fa;
 
 // Espaçamentos
