:lipstick: feat: Adiciona mais estilizações globais

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -20,6 +20,12 @@ body {
 button {
     cursor: pointer;
     outline: none;
+    padding: 0;
+}
+
+input {
+    border: none;
+    outline: none;
 }
 
 a {
