:iphone: feat: Adapta layout para desktops

--- a/src/components/GrupoProdutos/Produto/Produto.module.scss
+++ b/src/components/GrupoProdutos/Produto/Produto.module.scss
@@ -61,3 +61,12 @@
     }
 }
 
+@include breakpoint(desktop) {
+    .card {
+        width: 176px;
+
+        .wrapper {
+            width: 176px;
+        }
+    }
+}
