:lipstick: feat: Remove estilização padrão do textarea

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -26,6 +26,15 @@ button {
 input {
     border: none;
     outline: none;
+    padding: 0;
+}
+
+textarea {
+    border: none;
+    font-family: inherit;
+    outline: none;
+    padding: 0;
+    resize: none;
 }
 
 a {
