--- a/src/components/Rodape/Contato/Contato.module.scss
+++ b/src/components/Rodape/Contato/Contato.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    grid-area: contato;
     margin-top: 1rem;
     width: 100%;
 
