:iphone: feat: Adapta o layout para tablets

--- a/src/components/Rodape/Contato/Contato.module.scss
+++ b/src/components/Rodape/Contato/Contato.module.scss
@@ -29,3 +29,9 @@
         @include botao(primario, 40px, 151px);
     }
 }
+
+@include breakpoint(tablet) {
+    .formulario {
+        margin-top: 0;
+    }
+}
