:iphone: feat: Adapta layout para desktops

--- a/src/components/Rodape/Contato/Contato.module.scss
+++ b/src/components/Rodape/Contato/Contato.module.scss
@@ -35,3 +35,11 @@
         margin-top: 0;
     }
 }
+
+@include breakpoint(desktop) {
+    .formulario {
+        .botao {
+            @include botao(primario, 51px, 165px);
+        }
+    }
+}
