--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -22,7 +22,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        width: 275px;
+        width: 83.845%;
 
         .input {
             @include input(no-label);
@@ -38,6 +38,10 @@
     .principal {
         height: 295px;
         padding: $espacamento-lateral-medio;
+
+        .formulario {
+            width: 39.064%;
+        }
     }
 }
 
@@ -53,7 +57,7 @@
 
         .formulario {
             gap: 1.5rem;
-            width: 423px;
+            width: 37.236%;
 
             .botao {
                 @include botao(primario, 62px, 100%);
