--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -22,7 +22,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        width: (100 * 275) / 360 + vw;
+        width: calc((100 * 275) / 360) + vw;
 
         .input {
             @include input(no-label);
@@ -40,7 +40,7 @@
         padding: $espacamento-lateral-medio;
 
         .formulario {
-            width: (100 * 275) / 768 + vw;
+            width: calc((100 * 275) / 768) + vw;
         }
     }
 }
@@ -57,7 +57,7 @@
 
         .formulario {
             gap: 1.5rem;
-            width: (100 * 423) / 1440 + vw;
+            width: calc((100 * 423) / 1440) + vw;
 
             .botao {
                 @include botao(primario, 62px, 100%);
