--- a/src/pages/DetalhesProduto/DetalhesProduto.module.scss
+++ b/src/pages/DetalhesProduto/DetalhesProduto.module.scss
@@ -2,12 +2,19 @@
 @use '@/sass/mixins' as *;
 
 .principal {
+    padding: 0 $espacamento-lateral-pequeno;
+
     .produto {
         display: flex;
         flex-direction: column;
+        gap: 1rem;
+        margin-bottom: 1rem;
 
         .wrapper {
             height: 192px;
+            left: -1rem;
+            position: relative;
+            width: 100vw;
 
             .imagem {
                 height: 100%;
@@ -20,7 +27,6 @@
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
-            padding: 1rem $espacamento-lateral-pequeno;
 
             .nome,
             .preco,
@@ -53,7 +59,6 @@
 
         .produto {
             flex-direction: row;
-            gap: 1rem;
 
             .wrapper {
                 flex-shrink: 0;
