--- a/src/pages/Administracao/FormularioProduto/FormularioProduto.module.scss
+++ b/src/pages/Administracao/FormularioProduto/FormularioProduto.module.scss
@@ -29,3 +29,9 @@
         }
     }
 }
+
+@include breakpoint(tablet) {
+    .principal {
+        padding: 2rem $espacamento-lateral-medio;
+    }
+}
