--- a/src/components/GrupoProdutos/GrupoProdutos.module.scss
+++ b/src/components/GrupoProdutos/GrupoProdutos.module.scss
@@ -7,6 +7,8 @@
     .topo {
         align-items: center;
         display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
         justify-content: space-between;
         margin-bottom: 1rem;
 
