--- a/src/components/GrupoProdutos/Produto/Produto.module.scss
+++ b/src/components/GrupoProdutos/Produto/Produto.module.scss
@@ -7,7 +7,32 @@
     .wrapper {
         height: 174px;
         margin-bottom: 0.5rem;
+        position: relative;
         width: 156px;
+
+        .icones {
+            display: flex;
+            gap: 1rem;
+            position: absolute;
+            right: 0.5rem;
+            top: 0.5rem;
+
+            .excluir,
+            .editar {
+                background-repeat: no-repeat;
+                background-size: cover;
+                height: 24px;
+                width: 24px;
+            }
+
+            .excluir {
+                background-image: url('/assets/icons/lixeira.svg');
+            }
+
+            .editar {
+                background-image: url('/assets/icons/lapis.svg');
+            }
+        }
 
         .imagem {
             height: 100%;
