:lipstick: feat: Estiliza o botão de adicionar produto

--- a/src/components/GrupoProdutos/GrupoProdutos.module.scss
+++ b/src/components/GrupoProdutos/GrupoProdutos.module.scss
@@ -35,6 +35,10 @@
                 width: 16px;
             }
         }
+
+        .botaoEditar {
+            @include botao(primario, 40px, 151px);
+        }
     }
 
     .lista {
