--- a/src/components/GrupoProdutos/Produto/Produto.module.scss
+++ b/src/components/GrupoProdutos/Produto/Produto.module.scss
@@ -67,6 +67,13 @@
             line-height: normal;
             text-align: start;
         }
+
+        .identificador {
+            color: $cor-texto-secundaria;
+            font-size: $tamanho-fonte-pequeno;
+            font-weight: 500;
+            line-height: normal;
+        }
     }
 }
 
