--- a/src/components/GrupoProdutos/GrupoProdutos.module.scss
+++ b/src/components/GrupoProdutos/GrupoProdutos.module.scss
@@ -63,20 +63,22 @@
     .grupo {
         padding: 2rem 0;
 
-        .topo {
-            .botaoDestaque {
-                font-size: $tamanho-fonte-medio-pequeno;
-                gap: 0.5rem;
-
-                &::after {
-                    height: 24px;
-                    width: 24px;
-                }
-            }
-        }
-
         .lista {
             justify-content: start;
+        }
+
+        &.destaque {
+            .topo {
+                .botao {
+                    font-size: $tamanho-fonte-medio-pequeno;
+                    gap: 0.5rem;
+    
+                    &::after {
+                        height: 24px;
+                        width: 24px;
+                    }
+                }
+            }
         }
     }
 }
