--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -5,6 +5,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     gap: 1rem;
     height: 362px;
     justify-content: center;
