--- a/src/sass/_extends.scss
+++ b/src/sass/_extends.scss
@@ -21,6 +21,10 @@
     padding: 0.5rem 1rem;
     width: 100%;
 
+    &::placeholder {
+        color: $cor-texto-terciaria;
+    }
+
     &::-webkit-search-cancel-button {
         -webkit-appearance: none;
     }
