:lipstick: feat: Estiliza mensagem de erro

--- a/src/components/Rodape/Contato/Contato.module.scss
+++ b/src/components/Rodape/Contato/Contato.module.scss
@@ -25,6 +25,23 @@
         margin-top: 0.5rem;
     }
 
+    .erro {
+        align-items: center;
+        color: #d52323;
+        display: flex;
+        gap: 0.25rem;
+
+        &::before {
+            background-image: url('/assets/icons/error.svg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            content: '';
+            display: block;
+            height: 24px;
+            width: 24px;
+        }
+    }
+
     .botao {
         @include botao(primario, 40px, 151px);
     }
