:lipstick: feat: Adiciona variável para cor de mensagens de erro

--- a/src/components/Rodape/Contato/Contato.module.scss
+++ b/src/components/Rodape/Contato/Contato.module.scss
@@ -27,7 +27,7 @@
 
     .erro {
         align-items: center;
-        color: #d52323;
+        color: $cor-texto-erro;
         display: flex;
         gap: 0.25rem;
 
