--- a/src/sass/_variaveis.scss
+++ b/src/sass/_variaveis.scss
@@ -11,6 +11,7 @@ $cor-texto-primaria: #ffffff;
 $cor-texto-secundaria: #464646;
 $cor-texto-terciaria: #a2a2a2;
 $cor-texto-destaque: #2a7ae4;
+$cor-texto-erro: #d52323;
 
 // Tamanhos de Fonte
 $tamanho-fonte-muito-grande: 3.25rem;
