:lipstick: feat: Adiciona estilizações ao botão de Link

--- a/src/components/GrupoProdutos/GrupoProdutos.module.scss
+++ b/src/components/GrupoProdutos/GrupoProdutos.module.scss
@@ -54,6 +54,9 @@
         .topo {
             .botao {
                 @include botao(primario, 40px, 151px);
+                align-items: center;
+                display: flex;
+                justify-content: center;
             }
         }
     }
