--- a/src/pages/Home/Banner/Banner.module.scss
+++ b/src/pages/Home/Banner/Banner.module.scss
@@ -5,7 +5,7 @@
     background-image:
         linear-gradient(180deg, rgba(0, 0, 0, 0) 41.15%, rgba(0, 0, 0, 0.8) 100%),
         linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-        url('assets/images/banner.jpg');
+        url('/assets/images/banner.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
