:lipstick: feat: Adiciona estilização aos campos

--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -25,8 +25,8 @@
         gap: 1rem;
         width: calc((100 * 275) / 360) + vw;
 
-        .input {
-            @include input(no-label);
+        .campo {
+            width: 100%
         }
 
         .botao {
