--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -26,7 +26,7 @@
         width: calc((100 * 275) / 360) + vw;
 
         .campo {
-            width: 100%
+            width: 100%;
         }
 
         .botao {
