--- a/src/components/MensagemErro/MensagemErro.module.scss
+++ b/src/components/MensagemErro/MensagemErro.module.scss
@@ -12,6 +12,7 @@
         background-size: cover;
         content: '';
         display: block;
+        flex-shrink: 0;
         height: 24px;
         width: 24px;
     }
