--- a/src/sass/_extends.scss
+++ b/src/sass/_extends.scss
@@ -52,11 +52,11 @@
 %grupo-produtos {
     padding: 1rem 0;
 
-    @include breakpoint(tablet) {
+    @media screen and (min-width: 768px) {
         padding: 2rem 0;
     }
 
-    @include breakpoint(desktop) {
+    @media screen and (min-width: 1440px) {
         margin-bottom: 4rem;
         padding: 0;
 
@@ -81,7 +81,7 @@
     font-weight: 700;
     line-height: normal;
 
-    @include breakpoint(desktop) {
+    @media screen and (min-width: 1440px) {
         font-size: $tamanho-fonte-grande;
     }
 }
@@ -92,7 +92,7 @@
     gap: 1rem;
     justify-content: center;
 
-    @include breakpoint(tablet) {
+    @media screen and (min-width: 768px) {
         justify-content: start;
     }
 }
